--- a/index.html
+++ b/index.html
@@ -8,16 +8,15 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     
     <style>
-        /* カラーパレット (青と白を基調とした清潔感のあるデザイン) */
+       /* カラーパレット (ピンクと緑を基調としたデザイン) */
         :root {
-            --primary-color: #3498db; /* メインカラー (青) */
-            --secondary-color: #2980b9; /* アクセントカラー (濃い青) */
+            --primary-color: #ff69b4; /* メインカラー (ピンク) */
+            --secondary-color: #2ecc71; /* アクセントカラー (緑) */
             --background-light: #ffffff; /* 背景色 (白) */
-            --background-dark: #f4f7f6; /* セクション背景色 (薄いグレー) */
+            --background-dark: #f4fff7; /* セクション背景色 (薄い緑がかった白) */
             --text-color: #333333; /* テキスト色 */
             --shadow-light: 0 4px 10px rgba(0, 0, 0, 0.05);
         }
-
         /* リセットと基本設定 */
         * {
             margin: 0;
