--- a/index.html
+++ b/index.html
@@ -218,7 +218,14 @@
             <div class="container">
                 <i class="fa-solid fa-user-tie profile-icon"></i>
                 <h1>山田 逢央</h1>
-                <p>日本大学 理工学部 情報科学科 (仮)</label></p>
+                <p>日本大学 理工学部 情報科学科 
+<section id="intro">
+    <div class="container">
+        <div class="profile-photo-container">
+            <img src="data:image/jpeg;base64,https://crea.ismcdn.jp/mwimgs/b/0/670wm/img_b05c324528b17accf422909180df595834872.jpg " alt="山田逢央のプロフィール写真">
+        </div>
+        <h1>山田 逢央</h1>
+</label></p>
                 <div class="divider"></div>
                 <p>
                     情報科学を専攻し、Web技術とシステム開発に情熱を注いでいます。<br>
